fix image witdth on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -82,7 +82,7 @@ section {
   }
 }
 .hero-img {
-  widows: 70%;
+  width: 70%;
   margin-top: 3em;
 }
 .features-section {
